<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/settingsFragmentName"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/settingsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

            <androidx.cardview.widget.CardView
                android:id="@+id/call"
                style="@style/ThemeCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:contentPadding="12dp">

                <TextView
                    style="@style/ThemeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/contactDeveloper"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right|center_vertical"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="masseging.json"
                    app:lottie_loop="true" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/putStar"
                style="@style/ThemeCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:contentPadding="12dp">

                <TextView
                    style="@style/ThemeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/rateTheApp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right|center_vertical"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="starAnimation.json"
                    app:lottie_loop="true" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>