<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ConverterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/converterFragmentName"
                android:textColor="#4CAF50"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/changeFavorites"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right|center"
                android:layout_marginRight="16dp"
                android:background="?selectableItemBackground"
                android:src="@drawable/ic_baseline_create_24" />

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewUzb"
            style="@style/ThemeCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="4dp"
            app:contentPadding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/countryFlagIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_uz" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3">

                        <EditText
                            android:id="@+id/numberEnterUzb"
                            style="@style/ThemeEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="75dp"
                            android:background="@null"
                            android:hint="0"
                            android:cursorVisible="false"
                            android:inputType="numberDecimal"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:focusableInTouchMode="false"/>

                        <TextView
                            android:id="@+id/currencySymbol"
                            style="@style/ThemeText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:layout_marginRight="16dp"
                            android:gravity="center"
                            android:text="UZS"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                    </FrameLayout>

                    <TextView
                        android:id="@+id/currencyName"
                        style="@style/ThemeText"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="2"
                        android:gravity="right|center_vertical"
                        android:text="@string/uzbCurrencyName"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/converterRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/activity_converter_item_layout" />

        <LinearLayout
            android:id="@+id/notConnectionLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/noconnection" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/notConnectionTitle"
                android:textColor="#F44336"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                style="@style/ThemeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/notConnectionAdvice"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>